# qtmcserver

./: .gitignore  CMakeLists.txt  LICENSE  README  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  downloaddialog.cpp  downloaddialog.h  downloaddialog.ui  licensedialog.cpp  licensedialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtmcserver.pro  qtmcserver.qrc  qtmcserver.rc  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
linux/: qtmcserver.sh
nsis/: license.txt  qtmcserver.nsi
